fix z-index issue | oh | #617

--- a/packages/components-js/src/components/form/select-wrapper/select-wrapper.scss
+++ b/packages/components-js/src/components/form/select-wrapper/select-wrapper.scss
@@ -92,7 +92,6 @@
   &__label {
     display: block;
     position: relative;
-    z-index: 1;
   }
 
   &__label-text,
